--- a/templates/etc/sysconfig/elasticsearch.j2
+++ b/templates/etc/sysconfig/elasticsearch.j2
@@ -19,27 +19,13 @@
 # Elasticsearch home directory
 #ES_HOME=/usr/share/elasticsearch
 
-{% if elasticsearch_version == "5" %}
+{% if elasticsearch_version == "6" %}
 # Elasticsearch Java path
 #JAVA_HOME=
 {% endif %}
 
 # Elasticsearch configuration directory
-#CONF_DIR=/etc/elasticsearch
-
-# Elasticsearch data directory
-{% if elasticsearch_data_dir is defined %}
-DATA_DIR={{ elasticsearch_data_dir }}
-{% else %}
-#DATA_DIR=/var/lib/elasticsearch
-{% endif %}
-
-# Elasticsearch logs directory
-{% if elasticsearch_log_dir is defined %}
-LOG_DIR={{ elasticsearch_log_dir }}
-{% else %}
-#LOG_DIR=/var/log/elasticsearch
-{% endif %}
+ES_PATH_CONF=/etc/elasticsearch
 
 # Elasticsearch PID directory
 #PID_DIR=/var/run/elasticsearch
@@ -54,6 +40,8 @@ LOG_DIR={{ elasticsearch_log_dir }}
 # Elasticsearch service
 ################################
 
+# SysV init.d
+#
 # The number of seconds to wait before checking if Elasticsearch started successfully as a daemon process
 ES_STARTUP_SLEEP_TIME=5
 
@@ -61,9 +49,19 @@ ES_STARTUP_SLEEP_TIME=5
 # System properties
 ################################
 
+# Specifies the maximum file descriptor number that can be opened by this process
+# When using Systemd, this setting is ignored and the LimitNOFILE defined in
+# /usr/lib/systemd/system/elasticsearch.service takes precedence
+#MAX_OPEN_FILES=65535
+
 # The maximum number of bytes of memory that may be locked into RAM
 # Set to "unlimited" if you use the 'bootstrap.memory_lock: true' option
-# in elasticsearch.yml
-# When using Systemd, the LimitMEMLOCK property must be set
-# in /usr/lib/systemd/system/elasticsearch.service
+# in elasticsearch.yml.
+# When using systemd, LimitMEMLOCK must be set in a unit file such as
+# /etc/systemd/system/elasticsearch.service.d/override.conf.
 #MAX_LOCKED_MEMORY=unlimited
+
+# Maximum number of VMA (Virtual Memory Areas) a process can own
+# When using Systemd, this setting is ignored and the 'vm.max_map_count'
+# property is set at boot time in /usr/lib/sysctl.d/elasticsearch.conf
+#MAX_MAP_COUNT=262144
